# RISC--S-V

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-merge-commit
src/: alu.sv  branch_comp.sv  cpu.sv  decoder.sv  inst_mem.sv  ram.sv  reg_file.sv  types.sv
test/: alu.py  runner.py  test_add.py  test_and.py  test_auipc.py  test_branch.py  test_inst_mem.py  test_jump.py  test_load.py  test_lui.py  test_or.py  test_ram.py  test_reg_file.py  test_shift.py  test_slt.py  test_store.py  util.py
test/add/: alu.py  cpu.py
test/and/: alu.py  cpu.py
test/instructions/: add.hex  and.hex  auipc.hex  basic.hex  branch.hex  jump.hex  load.hex  lui.hex  or.hex  shift.hex  slt.hex  store.hex
test/or/: alu.py  cpu.py
test/shift/: alu.py  cpu.py
test/slt/: alu.py  cpu.py
tools/: install.sh  risc-branch  risc-finish
